src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

:root {
  --ifm-color-primary: #18b4e0;
  --ifm-color-primary-dark: #16a2ca;
  --ifm-color-primary-darker: #1499be;
  --ifm-color-primary-darkest: #117e9d;
  --ifm-color-primary-light: #29bee8;
  --ifm-color-primary-lighter: #34c1e9;
  --ifm-color-primary-lightest: #56cced;
  --ifm-code-font-size: 93%;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #19b9e7;
  --ifm-color-primary-dark: #16a7d1;
  --ifm-color-primary-darker: #159ec5;
  --ifm-color-primary-darkest: #1182a2;
  --ifm-color-primary-light: #30c0e9;
  --ifm-color-primary-lighter: #3cc4eb;
  --ifm-color-primary-lightest: #5fceee;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

[data-theme="dark"] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

/* CUSTOM CSS FOR IFRAME CONTAINER - DO NOT DELETE!! */
.videobox {
  position: relative;
  width: 100%;
  overflow: hidden;
  padding-top: 56.25%;
  margin-bottom: 50px;
}

/* CUSTOM CSS FOR YOUTUBE EMBEDDED IFRAME - DO NOT DELETE!! */
.iframe-element {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  border: none;
}

/* Mona Sans */
@font-face {
  font-family: "Mona Sans";
  src: url("/static/fonts/Mona-Sans.woff2") format("woff2 supports variations"),
    url("/static/fonts/Mona-Sans.woff2") format("woff2-variations");
  font-weight: 200 900;
  font-stretch: 75% 125%;
}

/* Inter */
@font-face {
  font-family: "Inter";
  src: url("/static/fonts/InterVariable.woff2") format("woff2 supports variations"),
    url("/static/fonts/InterVariable.woff2") format("woff2-variations");
  font-weight: 400 900;
  font-strength: 75% 125%;
}

/* JetBrains Mono */

/*** Regular ***/
@font-face {
  font-family: "JetBrains Mono";
  src: url("/static/fonts/JetBrainsMono-Regular.woff2") format("woff2");
  font-weight: 400;
  font-strength: 75%;
  font-style: normal;
  font-display: swap;
  font-synthesis: none;
}

/*** Italic ***/
@font-face {
  font-family: "JetBrains Mono";
  src: url("/static/fonts/JetBrainsMono-Italic.woff2") format("woff2");
  font-weight: 400;
  font-strength: 75%;
  font-style: italic;
  font-synthesis: none;
}

/*** Bold ***/
@font-face {
  font-family: "JetBrains Mono";
  src: url("/static/fonts/JetBrainsMono-ExtraBold.woff2") format("woff2");
  font-weight: 900;
  font-strength: 125%;
  font-style: normal;
  font-synthesis: none;
}

/*** Bold Italic ***/
@font-face {
  font-family: "JetBrains Mono";
  src: url("/static/fonts/JetBrainsMono-ExtraBoldItalic.woff2") format("woff2");
  font-weight: 900;
  font-strength: 125%;
  font-style: italic;
  font-synthesis: none;
}

body {
  font-family: "Inter", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Mona Sans", sans-serif;
}

code, pre, .mono {
  font-family: "JetBrains Mono", monospace;
}

/* SVGs set to this class will keep it contained within the page (no clipping or overlapping) */
.vectorimage, .vectorimagelight {
  max-width: 100%
}

/* Used in Global Masks page to ensure the SVG presented looks good on Light and Dark Themes. */
[data-theme='light'] .vectorimage,
[data-theme='dark'] .vectorimagelight {
  display: none;
}

img.icon {
  height: 1.5em;
  vertical-align: middle;
  margin-right: 0.25em;
}

